8376269: Mixed jstack cannot find function in vDSO